Disable deploy for pull requests
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Run codecov analysis
       uses: codecov/codecov-action@v1
   deploy:
+    if: ${{ github.event_name != 'pull_request' }}
     needs: build
     runs-on: ubuntu-latest
     name: Deploy
