--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ import java.text.SimpleDateFormat
 plugins {
   id 'java-library'
   id 'com.github.ben-manes.versions' version '0.41.0'
-  id "me.champeau.gradle.jmh" version "0.5.3"
+  id "me.champeau.jmh" version "0.6.6"
   id 'org.kordamp.gradle.java-project' version '0.47.0'
 }
 
@@ -67,8 +67,8 @@ dependencies {
   testImplementation 'org.hamcrest:hamcrest:2.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
-  testImplementation 'org.mockito:mockito-core:4.2.0'
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.2.0'
+  testImplementation 'org.mockito:mockito-core:4.3.1'
+  testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
   testImplementation 'org.openjdk.jmh:jmh-core:1.34'
 
   testRuntimeOnly 'org.mockito:mockito-core:4.2.0'
@@ -92,6 +92,7 @@ jar {
 }
 
 jmh {
+  jmhVersion = '1.34'
   humanOutputFile = null
   warmupIterations = 1
   iterations = 1
