Disable error prone plugin for Java 8
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/build.gradle
+++ b/build.gradle
@@ -181,6 +181,7 @@ config {
   }
   quality {
     errorprone {
+      enabled = JavaVersion.current() != JavaVersion.VERSION_1_8
       errorProneVersion = '2.11.0'
     }
   }
