--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ repositories {
 }
 
 dependencies {
-  testImplementation 'org.hamcrest:hamcrest:2.2'
+  testImplementation 'org.assertj:assertj-core:3.22.0'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
   testImplementation 'org.mockito:mockito-core:4.3.1'
