--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,9 @@ import java.text.SimpleDateFormat
 
 plugins {
   id 'java-library'
+  id 'com.diffplug.spotless' version '6.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
-  id "me.champeau.jmh" version "0.6.6"
+  id 'me.champeau.jmh' version '0.6.6'
   id 'org.kordamp.gradle.java-project' version '0.47.0'
 }
 
