--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@
  * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- * ====================================================================
+ * =================================================================================================
  * This software consists of voluntary contributions made by many individuals on behalf of the
  * XML:DB Initiative. For more information on the XML:DB Initiative, please see
- * <https://github.com/xmldb-org/>.
+ * <https://github.com/xmldb-org/>
  */
 import java.text.SimpleDateFormat
 
@@ -104,6 +104,13 @@ jmh {
   humanOutputFile = null
   warmupIterations = 1
   iterations = 1
+}
+
+spotless {
+  java {
+    eclipse().configFile('gradle/xmldb-api-style.xml')
+    importOrderFile('gradle/xmldb-api.importorder')
+  }
 }
 
 test {
