--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Codacy Analysis CLI
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Run codacy-analysis-cli
         uses: codacy/codacy-analysis-cli-action@master
   build:
@@ -23,12 +23,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        jdk: ['8', '11', '17']
+        jdk: ['8', '11', '17', '18']
         os: [ubuntu-latest]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK ${{ matrix.jdk }}
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: ${{ matrix.jdk }}
@@ -49,12 +49,16 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         distribution: temurin
-        gpg-private-key: "${{ secrets.GPG_SIGNING_KEY }}"
         java-version: '8'
     - name: Deploy
-      run: ./gradlew publish -x test -PsonatypeUsername=${{ secrets.OSSRH_USERNAME }} -PsonatypePassword=${{ secrets.OSSRH_PASSWORD }} -Psigning.password=${{ secrets.GPG_PASSPHRASE }}
+      env:
+        ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
+        ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_PASSPHRASE }}
+        ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.OSSRH_USERNAME }}
+        ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.OSSRH_PASSWORD }}
+      run: ./gradlew publish --no-daemon
