--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        jdk: ['8', '11', '17', '18']
+        jdk: ['11', '17', '18']
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: '8'
+        java-version: '11'
     - name: Deploy
       env:
         ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
