--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,10 @@
 version: 2
 updates:
-- package-ecosystem: gradle
+- package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-    interval: daily
-    time: "04:00"
-  open-pull-requests-limit: 10
+    interval: "weekly"
+- package-ecosystem: "gradle"
+  directory: "/"
+  schedule:
+    interval: "weekly"
