Clean up workflow and README
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,8 +40,8 @@ jobs:
       if:  ${{ matrix.jdk == '21' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: ./gradlew sonar -PsonarToken=$SONAR_TOKEN
+        ORG_GRADLE_PROJECT_sonarToken: ${{ secrets.SONAR_TOKEN }}
+      run: ./gradlew sonar
     - name: Run codecov analysis
       uses: codecov/codecov-action@v3
   deploy:
