--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,8 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
 name: CI
-
+env:
+  MIN_JDK: '17'
 on:
   push:
     branches: [ master ]
@@ -23,7 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        jdk: ['11', '17', '21']
+        jdk: ['17', '21', '22']
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v4
@@ -37,7 +38,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew check
     - name: SonarQube
-      if:  ${{ matrix.jdk == '21' }}
+      if:  ${{ matrix.jdk == env.MIN_JDK }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         ORG_GRADLE_PROJECT_sonarToken: ${{ secrets.SONAR_TOKEN }}
@@ -57,7 +58,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: temurin
-        java-version: '11'
+        java-version: ${{ env.MIN_JDK }}
     - name: Deploy
       env:
         ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
