--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,10 @@ dependencies {
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 }
 
+test {
+  finalizedBy jacocoTestReport
+}
+
 compileJava {
   options.compilerArgs << '-Xlint:unchecked'
 }
