Force default XML implementations
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,3 +41,7 @@
 # Deployment options - override in HOME/.gradle/gradle.properties
 ossrhUsername=
 ossrhPassword=
+
+systemProp.javax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl
+systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
+systemProp.javax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
