--- a/build.gradle
+++ b/build.gradle
@@ -71,9 +71,12 @@ repositories {
   mavenCentral()
 }
 
+sourceSets.main.resources {
+  srcDir 'src/main/proto'
+}
+
 dependencies {
   testImplementation 'org.assertj:assertj-core:3.27.3'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.0'
   testImplementation 'org.junit.jupiter:junit-jupiter-params:5.12.0'
   testImplementation 'org.mockito:mockito-core:5.15.2'
   testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
