--- a/build.gradle
+++ b/build.gradle
@@ -71,19 +71,6 @@ repositories {
   mavenCentral()
 }
 
-dependencies {
-  testImplementation 'org.assertj:assertj-core:3.27.3'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.12.0'
-  testImplementation 'org.mockito:mockito-core:5.15.2'
-  testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
-  testImplementation 'org.openjdk.jmh:jmh-core:1.37'
-
-  testRuntimeOnly 'org.mockito:mockito-core:5.15.2'
-  testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.12.0'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.12.0'
-}
-
 test {
   finalizedBy jacocoTestReport
 }
@@ -118,10 +105,17 @@ spotless {
   }
 }
 
-test {
-  useJUnitPlatform()
-  testLogging {
-    events 'skipped'
+testing {
+  suites {
+    test {
+      useJUnitJupiter()
+      dependencies {
+        implementation 'org.assertj:assertj-core:3.27.3'
+        implementation 'org.mockito:mockito-junit-jupiter:5.15.2'
+        implementation 'org.openjdk.jmh:jmh-core:1.37'
+        implementation 'org.simplify4u:slf4j-mock:2.4.0'
+      }
+    }
   }
 }
 
