Adds protobuf definitions
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ repositories {
   mavenCentral()
 }
 
+sourceSets.main.resources {
+  srcDir 'src/main/proto'
+}
+
 test {
   finalizedBy jacocoTestReport
 }
