--- a/gradle.properties
+++ b/gradle.properties
@@ -39,8 +39,8 @@
 #
 
 # Deployment options - override in HOME/.gradle/gradle.properties
-ossrhUsername=
-ossrhPassword=
+sonatypeUsername=
+sonatypePassword=
 
 systemProp.javax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl
 systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
